# ground-control

./: .gitignore  3D_plotting.py  LICENSE  Pipfile  README.md  contributing.md  data_packet.py  deque_practice.py  example.txt  example2.txt  example3.txt  example_data.py  fool_around.py  history.txt  install.md  log.py  main.py  main_display.py  new.py  pyproject.toml  rf.py  run.csv  run1.csv  subplots_w_multiple_sets.py  try.py  version_1.py  works_but_for_function.py
analysis/: main.py
data_viewer/: USAGE.md  viewer.py
live_monitoring/: commanding_panel.py  commands.py  custom_graph_widget.py  custom_number_display.py  file_management_widget.py  gui.py  gui_util.py  main.py  rf.py  state_management_widget.py  threading_logs.py
live_monitoring_rework/: custom_graph_widget.py  file_management_widget.py  gui.py  rf.py  threading_logs.py
run0/: data.csv
run1/: data.csv
runs/2axis1/: data.csv
runs/2axis2/: data.csv
runs/416drop test/: data.csv
runs/430drop3/: data.csv
runs/430droptest/: data.csv
runs/430droptest2/: data.csv
runs/TEST3/: data.csv
runs/run0/: data.csv  structure.txt
runs/run1/: data.csv  structure.txt
runs/run10/: data.csv
runs/run102/: structure.txt
runs/run103/: data.csv
runs/run106/: data.csv
runs/run109/: data.csv
runs/run110/: data.csv
runs/run112/: data.csv
runs/run12/: data.csv
runs/run13/: data.csv
runs/run14/: data.csv
runs/run17/: structure.txt
runs/run2/: data.csv  stability2_run1_rf.csv  structure.txt
runs/run22/: structure.txt
runs/run23/: data.csv  (+1 more)
structure_manager/: structure_manager.py
(+96 files in other folders)
