[project]
name = "ground-control"
version = "0.1.0"
description = "Ground control software for model rocket launches. Built for UConn Propulsive Landing Team."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyserial (>=3.5,<4.0)",
    "pyside6 (>=6.8.1.1,<7.0.0.0)",
    "qdarkstyle (>=3.2.3,<4.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
